Add languages, fonts & editor colors; save edits.
- Add `<title>`.
- Add font family placeholder.
- Fill in more colors.
- Focus editor on load.
- Focus hex inputs up or down by pressing arrow keys.
- Clean up.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang=en>
 <head>
+	<title>Color Schemer</title>
 	<script type=module src=.build/main.js></script>
 	<style>
 		html, body {
 			width: 100%;
 			height: 100%;
 			margin: 0;
-			pading: 0;
 		}
 
 		body {
@@ -16,8 +16,17 @@
 			color: #afbfbf;
 		}
 
+		:focus-visible {outline: 2px solid}
+
+		input, select {
+			background: inherit;
+			color: inherit;
+			padding: 0.3em;
+			border: 1px solid;
+			justify-self: end;
+		}
+
 		#options {
-			min-width: 25em;
 			height: 100%;
 			overflow: auto;
 			box-sizing: border-box;
@@ -26,20 +35,11 @@
 			scroll-margin: 0;
 		}
 
-		input {
-			background: inherit;
-			color: inherit;
-			padding: 0;
-			border: 1px solid;
-			justify-self: end;
-		}
-
-		:focus-visible {outline: 2px solid}
-
 		#colors, #editor {
 			display: grid;
 			row-gap: 0.25em;
 			column-gap: 1em;
+			white-space: nowrap;
 		}
 
 		#editor {
@@ -47,32 +47,51 @@
 			margin-bottom: 2.5em;
 		}
 
-		#colors {grid-template-columns: auto auto auto}
+		#colors {
+			grid-template-columns: auto auto auto;
 
-		#colors input[type=text] {width: 7em}
-		#colors input[type=color] {border: none}
+			& input[type=text] {width: 7em}
+			& input[type=color] {border: none}
+		}
 
 		.cm-editor {
 			flex-grow: 1;
 			height: 100%;
-		}
 
-		.cm-editor .cm-gutters {
-			background: inherit;
-			border-color: #323232;
-			color: #888;
-		}
+			.cm-activeLine,
+			.cm-activeLineGutter {
+				background: #323232
+			}
 
-		.cm-editor .cm-activeLine {background: #323232}
-		.cm-editor .cm-activeLineGutter {background: #323232}
+			.cm-gutters {
+				border-color: #323232;
+				color: #888;
+			}
+		}
 	</style>
 </head>
 
 <body>
 	<div id=options>
 		<section id=editor>
-			font family <input id=font-family type=text value="monospace" onchange="setFontFamily()">
+			font family <input id=font-family type=text placeholder="Fira Mono" list=fonts onfocus=this.showPicker() onchange=setFontFamily()>
 			font size <input id=font-size type=number value=16 min=1 oninput=setFontSize()>
+			language <select id=language></select>
+
+			<datalist id=fonts>
+				<option value="Anonymous Pro"></option>
+				<option value="Cascadia Code"></option>
+				<option value=Consolas></option>
+				<option value="DejaVu Sans Mono"></option>
+				<option value="Fira Code"></option>
+				<option value="Fira Mono"></option>
+				<option value=Hack></option>
+				<option value=Inconsolata></option>
+				<option value="JetBrains Mono"></option>
+				<option value=Monaco></option>
+				<option value="Source Code Pro"></option>
+				<option value="Ubuntu Mono"></option>
+			</datalist>
 		</section>
 		<section id=colors></section>
 	</div>
