Use `.build` as the website's root.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
 	<title>Color Schemer</title>
-	<script type=module src=.build/main.js></script>
+	<script type=module src=main.js></script>
 	<style>
 		html, body {
 			width: 100%;
